# dd-trace-py

./: .gitignore  hatch.toml  pyproject.toml  riotfile.py  setup.py
.circleci/: config.templ.yml  config.yml
.github/workflows/: build_deploy.yml
.gitlab/: benchmarks.yml
benchmarks/core_api/: config.yaml  scenario.py
ddtrace/: _hooks.py  _monkey.py  provider.py  span.py  tracer.py
ddtrace/_trace/: tracer.py
ddtrace/_trace/processor/: __init__.py
ddtrace/appsec/: _asm_request_context.py  _common_module_patches.py  _metrics.py  _processor.py  _remoteconfiguration.py  _trace_utils.py
ddtrace/appsec/_ddwaf/: ddwaf_types.py
ddtrace/bootstrap/: preload.py
ddtrace/debugging/: _debugger.py
ddtrace/features/: __init__.py
ddtrace/internal/: _core.pyi  _encoding.pyx  _rand.py  _threads.cpp  _threads.pyi  core.py  module.py  periodic.py  rate_limiter.py  service.py
ddtrace/profiling/: profiler.py
ddtrace/settings/: asm.py  config.py
ddtrace/tracing/: _span_link.py
docs/: contributing-testing.rst  maintaining.rst
releasenotes/notes/: ignore_stopiteration_exception-43806201b7fc8005.yaml
scripts/: ddtest  gen_circleci_config.py
src/core/: Cargo.toml  data_pipeline.rs  lib.rs  message_bus.rs  scheduler.rs
src/tracing_utils/: Cargo.toml
tests/: .suitespec.json  conftest.py  utils.py
tests/internal/: test_context_events_api.py  test_forksafe.py  test_module.py  test_periodic.py
tests/snapshots/: tests.contrib.wsgi.test_wsgi.test_stop_iteration_in_wsgi_app_py3.json
tests/tracer/: test_encoders.py  test_processors.py
(+69 files in other folders)
